#!/usr/bin/env node

/**
 * Primer roÄnega testiranja gRPC klicev
 * 
 * Zagon: node test-grpc.js
 */

const grpcClient = require('./grpc/client');

async function runTests() {
    console.log('ğŸš€ ZaÄenjam testiranje gRPC klicev...\n');

    try {
        // Test 1: Iskanje
        console.log('1ï¸âƒ£  TEST: SearchProducts');
        console.log('   Iskanje: "maslo"');
        const searchResult = await grpcClient.searchProducts('maslo', '', 5);
        console.log(`   âœ… Rezultati: ${searchResult.products.length} proizvodov`);
        if (searchResult.products.length > 0) {
            console.log(`   ğŸ“¦ Primer: ${searchResult.products[0].name} - ${searchResult.products[0].price}â‚¬\n`);
        }

        // Test 2: Po kategoriji
        console.log('2ï¸âƒ£  TEST: GetProductsByCategory');
        console.log('   Kategorija: "mleÄni"');
        const categoryResult = await grpcClient.getProductsByCategory('mleÄni', 0, 10);
        console.log(`   âœ… Rezultati: ${categoryResult.products.length} proizvodov`);
        if (categoryResult.products.length > 0) {
            console.log(`   ğŸ“¦ Primer: ${categoryResult.products[0].name} @ ${categoryResult.products[0].store}\n`);
        }

        // Test 3: Statistika
        console.log('3ï¸âƒ£  TEST: GetProductStats');
        console.log('   Proizvod: "maslo"');
        const statsResult = await grpcClient.getProductStats('maslo');
        console.log(`   âœ… PovpreÄna cena: ${statsResult.average_price}â‚¬`);
        console.log(`   ğŸ“Š Dostopnost: ${statsResult.availability_count} trgovin`);
        console.log(`   ğŸ’° Najtaje: ${statsResult.lowest_price_store}`);
        console.log(`   ğŸ’¸ NajdraÅ¾e: ${statsResult.highest_price_store}\n`);

        // Test 4: Vsi proizvodi
        console.log('4ï¸âƒ£  TEST: GetAllProducts');
        const allResult = await grpcClient.getAllProducts();
        console.log(`   âœ… Skupaj: ${allResult.total_count} proizvodov`);
        console.log(`   â° ÄŒas: ${allResult.timestamp}\n`);

        // Test 5: Streaming
        console.log('5ï¸âƒ£  TEST: WatchPriceUpdates (Streaming)');
        console.log('   Kategorija: "mleÄni"');
        console.log('   ÄŒakam na posodobitve...\n');
        const streamResult = await grpcClient.watchPriceUpdates('mleÄni');
        console.log(`   âœ… Prejeto ${streamResult.length} posodobitev\n`);

        console.log('âœ… Vsi testi zakljuÄeni!\n');

    } catch (err) {
        console.error('âŒ Napaka:', err.message);
        process.exit(1);
    }

    process.exit(0);
}

runTests();
